--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,8 @@
-<img class="borito" src="https://static.streetkitchen.hu/live/uploads/2022/01/set-pecan-pistachios-almond-peanut-cashew-pine-nuts-lined-up-assorted-nuts-dried-fruits-mini-different-bowls-1618x855.jpg" alt="">
+<div class="borito">
+
+</div>
 <div class="container">
-    <h1>Termékek</h1>
-    <div *ngFor="let mag of magvak">
-        <div class="card" style="width: 18rem;">
-            <img [src]="mag.picture" class="card-img-top" alt="{{mag.name}}">
-            <div class="card-body">
-                <h5 class="card-title">{{mag.name}}</h5>
-                <p class="card-text">{{mag.price}} Ft</p>
-                <p class="card-text">{{mag.description}}</p>
-            </div>
-        </div>
-    </div>
+    <h1>Termékeinkről</h1>
+        <p>Nagyon finom, nagyon jó magok <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, autem! Amet laborum nisi ullam debitis incidunt, sint aliquam cupiditate unde et eos pariatur aut, rerum suscipit quia est fugiat odit consequuntur? Ad dolor, ullam voluptatibus accusamus, delectus nam dicta aliquid optio quas ducimus consequuntur doloribus. Autem dolorum a nam soluta, recusandae provident. Nostrum eaque in aliquid! A quae sed consequatur eius atque corrupti non cupiditate dolore nulla veritatis aut itaque fuga voluptatum enim ab est, accusantium, dignissimos facere consectetur voluptate error laboriosam eos. Quia eligendi expedita sunt, non, velit repellat ut animi temporibus sint id aliquid, necessitatibus libero obcaecati alias?</p>
+
 </div>
