--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,34 @@
 .borito {
     width: 100%;
     height: 30vh;
+    z-index: 1;
+    background-image:url("https://cms.static.marquardmedia.hu/data/cikk/341/341634.1200x630.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.borito img {
+    width: 100%;
+}
+.card {
+    margin: 10px;
+    display: inline-block;
+    width: 18rem;
+
+}
+
+.card img {
+    height: 15rem;
 }
 
 .card {
-    display: block;
+    filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
+}
+.card:hover {
+    filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.4));
+}
+
+.container {
+    background-color: white;
+    z-index: 50;
 }
