--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="login-left">
+      <h2>Bejelentkezés 👋</h2>
+      <form>
+        <label for="user">Felhasználónév</label>
+        <input type="user" id="user" name="user" placeholder="A neved">
+        <label for="password">Jelszó</label>
+        <input type="password" id="password" name="password" placeholder="******">
+        <button type="submit" class="btn btn-signin">Belépés</button>
+      </form>
+    </div>
+  </div>
